Update tracker backend, bots, and deployment scripts

--- a/.env.example
+++ b/.env.example
@@ -16,7 +16,7 @@ TELEGRAM_CHAT_ID=your_telegram_chat_id_here
 CLOUDFLARE_TUNNEL_TOKEN=your_cloudflare_tunnel_token_here
 
 # Timezone
-TZ=Europe/Moscow
+TZ=Europe/Kyiv
 
 # Report schedule (cron format)
 DAILY_REPORT_HOUR=23
